Bug #42408: fix Cross Site Scripting (XSS) vulnerabilities
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@76789 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-lessontimes/debian/changelog
+++ b/ucs-school-umc-lessontimes/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-lessontimes (5.0.0-1) unstable; urgency=medium
+
+  * Bug #42408: fix Cross Site Scripting (XSS) vulnerabilities
+
+ -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 11:49:46 +0100
+
 ucs-school-umc-lessontimes (4.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
