--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,6 +1,7 @@
 ucs-school-umc-installer (5.0.0-1) unstable; urgency=medium
 
   * Bug #43389: use univention.lib.umc.Client
+  * Bug #42408: fix Cross Site Scripting (XSS) vulnerabilities
 
  -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 10:25:54 +0100
 
